--- a/videopage.html
+++ b/videopage.html
@@ -9,7 +9,39 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
-	<title>Mememento</title>
+
+<link href='https://fonts.googleapis.com/css?family=Permanent+Marker:400' rel='stylesheet' type='text/css'>
+
+<!-- Typography -->
+<div class="kir">
+  <h1 class="kir-r1">Memento</h1>
+  <h2 class="kir-r2">The Dankest Memes</h2>
+</div>
+
+<style type="text/css">
+.kir {
+  color: #d44b15;
+  text-align: center;
+  background-color: black;
+  font-size: 1em;
+  font-family: Permanent Marker, serif;
+  padding: 7em 0em 13em;
+}
+
+.kir-r1 {
+  line-height: 1em;
+  font-size: 10em;
+  font-weight: 100;
+  color: #fff;
+}
+
+.kir-r2 {
+  line-height: 1em;
+  margin-top: -2em;
+  font-size: 5.5em;
+}
+
+</style>
 
 	<style>
 		.vl {
@@ -57,7 +89,8 @@
 		<br>
 		
 		<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Je3vDBqGgL0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFsQleAWXsj_4yDeebiIADdH5FMayBiJo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 	</center>
 
 				<center>
