--- a/PopUsers.html
+++ b/PopUsers.html
@@ -80,8 +80,8 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
-					<a class="nav-brand" href="homePage.html">
-						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
+					<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html">Home</a>
+						<!-- <i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i> -->
 					</a>
 				</li>
 			    <li class="nav-item">
@@ -89,7 +89,7 @@
 			    </li>
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
-			    </li>
+			    </li>a
 			  </ul>
 		</nav>
 	</div>
@@ -97,8 +97,7 @@
 
 	<div class="container">
 		<h1 style="color:lightgray">Popular Users</h1>
-	</div>	
+	</div>
 </body>
 
 </html>
-
