--- a/PopUsers.html
+++ b/PopUsers.html
@@ -80,7 +80,7 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
-					<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html">Home</a>
+					<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 						<!-- <i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i> -->
 					</a>
 				</li>
