--- a/homePage.html
+++ b/homePage.html
@@ -264,8 +264,9 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
+										<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					<a class="nav-brand" href="homePage.html">
-						
+
 					</a>
 				</li>
 			    <li class="nav-item">
