--- a/homePage.html
+++ b/homePage.html
@@ -275,6 +275,9 @@
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
 			    </li>
+				<li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videopage.html">Video Stream</a>
+			    </li>
 			  </ul>
 		</nav>
 	</div>
