--- a/PopUsers.html
+++ b/PopUsers.html
@@ -33,7 +33,7 @@
 			  		</form>
 			  	</li>
 			  	<li>
-				    <a class="nav-link" href="#signup" style="color:teal">Sign Up</a>
+				    <a class="nav-link" href="signup.html" style="color:teal">Sign Up</a>
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link fa fa-user" href="#login" style="font-size:20px;color:teal"></a>
@@ -63,7 +63,7 @@
 								</div>
 
 								<div class="modal-footer">
-									<a href="#signupPage">Sign Up</a>
+									<a href="signup.html">Sign Up</a>
 								</div>
 
 							</div>
