--- a/popMemes.html
+++ b/popMemes.html
@@ -29,7 +29,7 @@
 			  		</form>
 			  	</li>
 			  	<li>
-				    <a class="nav-link" href="#signup" style="color:teal">Sign Up</a>
+				    <a class="nav-link" href="signup.html" style="color:teal">Sign Up</a>
 				</li>
 				<li class="nav-item">
 				    <a class="nav-link fa fa-user" href="#profile" style="font-size:20px;color:teal"></a>
@@ -59,7 +59,7 @@
 								</div>
 
 								<div class="modal-footer">
-									<a href="#signupPage">Sign Up</a>
+									<a href="signup.html">Sign Up</a>
 								</div>
 
 							</div>
