--- a/videoPage.html
+++ b/videoPage.html
@@ -55,26 +55,7 @@
 
 </head>
 <body style="background-color:black">
-	<div class="col-1 vl fixed-top">
-		<nav class="nav flex-column fixed-top">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-brand" href="#">
-						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
-					</a>
-				</li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray" href="#">Trending Memes</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray" href="#">Popular Memes</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray" href="#">Popular Users</a>
-			    </li>
-			  </ul>
-		</nav>
-	</div>
+	
 
 		<nav class="navbar justify-content-end">
 			<form class="form-inline nav-item" action="#">
@@ -97,7 +78,31 @@
 				<iframe src='https://minnit.chat/MemerChat?embed&nickname=' style='border:none;width:60%;height:300px;' allowTransparency='true'></iframe><br>
 	</center>
 
+<div class="col-1 vl fixed-top">
+		<nav class="nav flex-column">
+			<ul class="navbar-nav" style="margin-top:20px">
+				<li class="nav-item">
+					<a class="nav-brand" href="homePage.html">
+						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
+					</a>
+				</li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="uploadPage.html">Upload</a>
+			    </li>
+			  </ul>
 
+		</nav>
+	</div>
+	
 
 
 
