--- a/popMemes.html
+++ b/popMemes.html
@@ -137,9 +137,8 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
-										<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					<a class="nav-brand" href="homePage.html">
-
+						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
 					</a>
 				</li>
 			    <li class="nav-item">
@@ -148,9 +147,17 @@
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
 			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
+			    </li>
+			    <li class="nav-item">
+			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="uploadPage.html">Upload</a>
+			    </li>
 			  </ul>
+
 		</nav>
 	</div>
+	
 
 
 
