--- a/homePage.html
+++ b/homePage.html
@@ -259,13 +259,13 @@
 		Creating the vertical "sticky" navbar for with trending memes, popular memes, and popular users links, as well as a homepage link(fa-anchor icon)
 	-->
 
-
 	<div class="col-1 vl fixed-top">
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
+						                  <a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					<a class="nav-brand" href="homePage.html">
-						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
+
 					</a>
 				</li>
 			    <li class="nav-item">
@@ -284,7 +284,7 @@
 
 		</nav>
 	</div>
-	
+
 
 
 
