--- a/homePage.html
+++ b/homePage.html
@@ -121,7 +121,7 @@
 		<center>
 		<h4 class="card-title">Meme OTD</h4>
 	</center>
-	  <img src="strecch.jpg" alt="Flowers in Chania" width="400" height="400" class = "center">
+	  <img src="https://images-cdn.9gag.com/photo/ax1NE4K_460s.jpg" alt="Flowers in Chania" width="400" height="400" class = "center">
 	  <div class="card-body">
 
 	    <center>
