--- a/homePage.html
+++ b/homePage.html
@@ -119,7 +119,7 @@
 	<center>
 	<div class="card bg-dark text-white" style="width:400px">
 		<center>
-		<h4 class="card-title">Meme OTD</h4>
+		<h4 class="card-title">Meme of the Day</h4>
 	</center>
 	  <img src="https://images-cdn.9gag.com/photo/ax1NE4K_460s.jpg" alt="Flowers in Chania" width="400" height="400" class = "center">
 	  <div class="card-body">
