--- a/videoPage.html
+++ b/videoPage.html
@@ -12,6 +12,18 @@
 
 <link href='https://fonts.googleapis.com/css?family=Permanent+Marker:400' rel='stylesheet' type='text/css'>
 
+<nav class="navbar justify-content-end">
+	<form class="form-inline nav-item" action="#">
+			<input class="form-control mr-sm-2" type="text" placeholder="Search">
+			<button class="btn" style="color:teal;border-color:teal" type="submit">Search</button>
+		</form>
+		<a class="nav-link" href="#" style="color:teal">Sign Up</a>
+		<a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a>
+		<a class="nav-link" href="#" style="color:teal">Profile</a>
+</nav>
+<link rel="stylesheet" href="center.css">
+<br>
+
 <!-- Typography -->
 <div class="kir">
   <h1 class="kir-r1">Memento</h1>
@@ -27,20 +39,17 @@
   font-family: Permanent Marker, serif;
   padding: 7em 0em 13em;
 }
-
 .kir-r1 {
   line-height: 1em;
   font-size: 10em;
   font-weight: 100;
   color: #fff;
 }
-
 .kir-r2 {
   line-height: 1em;
   margin-top: -2em;
   font-size: 5.5em;
 }
-
 </style>
 
 	<style>
@@ -55,20 +64,10 @@
 
 </head>
 <body style="background-color:black">
-	
 
-		<nav class="navbar justify-content-end">
-			<form class="form-inline nav-item" action="#">
-	    		<input class="form-control mr-sm-2" type="text" placeholder="Search">
-	    		<button class="btn" style="color:teal;border-color:teal" type="submit">Search</button>
-	  		</form>
-		    <a class="nav-link" href="#" style="color:teal">Sign Up</a>
-		    <a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a>
-		    <a class="nav-link" href="#" style="color:teal">Profile</a>
-		</nav>
-		<link rel="stylesheet" href="center.css">
-		<br>
-		
+
+
+
 		<center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFsQleAWXsj_4yDeebiIADdH5FMayBiJo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -82,8 +81,8 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
+					<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					<a class="nav-brand" href="homePage.html">
-						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
 					</a>
 				</li>
 			    <li class="nav-item">
@@ -102,7 +101,7 @@
 
 		</nav>
 	</div>
-	
+
 
 
 
