--- a/videoPage.html
+++ b/videoPage.html
@@ -69,7 +69,15 @@
 
 
 		<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLFsQleAWXsj_4yDeebiIADdH5FMayBiJo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe
+    src="https://player.twitch.tv/?channel=zackbatl&muted=true"
+    height="720"
+    width="1280"
+    frameborder="0"
+    scrolling="no"
+    allowfullscreen="true">
+</iframe>
+
 
 	</center>
 
