--- a/uploadPage.html
+++ b/uploadPage.html
@@ -116,7 +116,7 @@
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
 					<a class="nav-brand" href="homePage.html">
-						<i class="fas fa-anchor" style="font-size:20px;color:lightgray"></i>
+						<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					</a>
 				</li>
 			    <li class="nav-item">
