--- a/uploadPage.html
+++ b/uploadPage.html
@@ -79,11 +79,11 @@
        
 	<center>
 <div class="card bg-white text-black" style="width:400px">
+		
+<br>
 		<form>
-<form action="upload.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
+			<label class="sr-only" for="inlineFormInput">Image Link</label>
+			 <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Insert Image Link">
 </form>
   <div class="form-row align-items-center">
     <div class="col-auto">
