--- a/popMemes.html
+++ b/popMemes.html
@@ -14,7 +14,15 @@
 <title>Memento</title>
 
 </head>
-<body style="background-color:black">
+<body style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');">
+	<style>
+body {
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 
 	<!--
 		Creating the non-sticky horizontal navbar. Has a search bar, login button, signup button(fa-user icon), and profile button
@@ -80,7 +88,7 @@
 .kir {
   color: #d44b15;
   text-align: center;
-  background-color: black;
+
   font-size: 1em;
   font-family: Permanent Marker, serif;
   padding: 7em 0em 13em;
@@ -138,15 +146,13 @@
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
 					<a class="nav-brand" href="homePage.html">
-						<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
+						  <a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					</a>
 				</li>
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a>
 			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
-			    </li>
+			    
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
 			    </li>
