--- a/uploadPage.html
+++ b/uploadPage.html
@@ -33,7 +33,15 @@
 	</style>
 
 </head>
-<body style="background-color:black">
+<body style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');">
+	<style>
+body {
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 	
 
 		<nav class="navbar justify-content-end">
@@ -55,7 +63,7 @@
 .kir {
   color: #d44b15;
   text-align: center;
-  background-color: black;
+
   font-size: 1em;
   font-family: Permanent Marker, serif;
   padding: 7em 0em 13em;
@@ -79,8 +87,7 @@
        
 	<center>
 <div class="card bg-white text-black" style="width:400px">
-		
-<br>
+	<br>
 		<form>
 			<label class="sr-only" for="inlineFormInput">Image Link</label>
 			 <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Insert Image Link">
@@ -122,9 +129,7 @@
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a>
 			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
-			    </li>
+			   
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
 			    </li>
