--- a/videoPage.html
+++ b/videoPage.html
@@ -12,18 +12,26 @@
 
 <link href='https://fonts.googleapis.com/css?family=Permanent+Marker:400' rel='stylesheet' type='text/css'>
 
-<nav class="navbar justify-content-end">
-	<form class="form-inline nav-item" action="#">
-			<input class="form-control mr-sm-2" type="text" placeholder="Search">
-			<button class="btn" style="color:teal;border-color:teal" type="submit">Search</button>
-		</form>
-		<a class="nav-link" href="#" style="color:teal">Sign Up</a>
-		<a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a>
-		<a class="nav-link" href="#" style="color:teal">Profile</a>
-</nav>
-<link rel="stylesheet" href="center.css">
-<br>
+<body style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');">
+	<style>
+body {
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+	
 
+		<nav class="navbar justify-content-end">
+			<form class="form-inline nav-item" action="#">
+	    		<input class="form-control mr-sm-2" type="text" placeholder="Search">
+	    		<button class="btn" style="color:teal;border-color:teal" type="submit">Search</button>
+	  		</form>
+		    <a class="nav-link" href="#" style="color:teal">Sign Up</a>
+		    <a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a>
+		    <a class="nav-link" href="#" style="color:teal">Profile</a>
+		</nav>
 <!-- Typography -->
 <div class="kir">
   <h1 class="kir-r1">Memento</h1>
@@ -34,22 +42,24 @@
 .kir {
   color: #d44b15;
   text-align: center;
-  background-color: black;
   font-size: 1em;
   font-family: Permanent Marker, serif;
   padding: 7em 0em 13em;
 }
+
 .kir-r1 {
   line-height: 1em;
   font-size: 10em;
   font-weight: 100;
   color: #fff;
 }
+
 .kir-r2 {
   line-height: 1em;
   margin-top: -2em;
   font-size: 5.5em;
 }
+
 </style>
 
 	<style>
@@ -63,21 +73,19 @@
 	</style>
 
 </head>
-<body style="background-color:black">
 
-
-
-
+		<link rel="stylesheet" href="center.css">
+		<br>
+		
 		<center>
-	<iframe
+<iframe
     src="https://player.twitch.tv/?channel=zackbatl&muted=true"
-    height="720"
-    width="1280"
+    height="360"
+    width="720"
     frameborder="0"
     scrolling="no"
     allowfullscreen="true">
 </iframe>
-
 
 	</center>
 
@@ -89,17 +97,14 @@
 		<nav class="nav flex-column">
 			<ul class="navbar-nav" style="margin-top:20px">
 				<li class="nav-item">
-					<a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					<a class="nav-brand" href="homePage.html">
+					 <a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
 					</a>
 				</li>
 			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a>
 			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopUsers.html">Popular Users</a>
-			    </li>
-			    <li class="nav-item">
+			    			    <li class="nav-item">
 			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
 			    </li>
 			    <li class="nav-item">
@@ -109,7 +114,7 @@
 
 		</nav>
 	</div>
-
+	
 
 
 
