--- a/videoPage.html
+++ b/videoPage.html
@@ -1,122 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
-
-<link href='https://fonts.googleapis.com/css?family=Permanent+Marker:400' rel='stylesheet' type='text/css'>
-
-<body style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');">
-	<style>
-body {
-  background-image: url('img_girl.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script><script src="https://kit.fontawesome.com/a076d05399.js"></script><link href="https://fonts.googleapis.com/css?family=Permanent+Marker:400" rel="stylesheet" type="text/css"></head><body style="background-image: url('https://media.giphy.com/media/JrTMRGVbcriWWGtpYs/giphy.gif');"><style>body {
+background-image: url('img_girl.jpg');
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+}</style><nav class="navbar justify-content-end"><form class="form-inline nav-item" action="#"><input class="form-control mr-sm-2" type="text" placeholder="Search"><button class="btn" style="color:teal;border-color:teal" type="submit">Search</button></form><a class="nav-link" href="#" style="color:teal">Sign Up</a><a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a><a class="nav-link" href="#" style="color:teal">Profile</a></nav><!-- Typography--><div class="kir"><h1 class="kir-r1">Memento</h1><h2 class="kir-r2">The Dankest Memes</h2></div><style type="text/css">.kir {
+color: #d44b15;
+text-align: center;
+font-size: 1em;
+font-family: Permanent Marker, serif;
+padding: 7em 0em 13em;
 }
-</style>
-	
-
-		<nav class="navbar justify-content-end">
-			<form class="form-inline nav-item" action="#">
-	    		<input class="form-control mr-sm-2" type="text" placeholder="Search">
-	    		<button class="btn" style="color:teal;border-color:teal" type="submit">Search</button>
-	  		</form>
-		    <a class="nav-link" href="#" style="color:teal">Sign Up</a>
-		    <a class="nav-link fa fa-user" href="#" style="font-size:20px;color:teal"></a>
-		    <a class="nav-link" href="#" style="color:teal">Profile</a>
-		</nav>
-<!-- Typography -->
-<div class="kir">
-  <h1 class="kir-r1">Memento</h1>
-  <h2 class="kir-r2">The Dankest Memes</h2>
-</div>
-
-<style type="text/css">
-.kir {
-  color: #d44b15;
-  text-align: center;
-  font-size: 1em;
-  font-family: Permanent Marker, serif;
-  padding: 7em 0em 13em;
-}
-
 .kir-r1 {
-  line-height: 1em;
-  font-size: 10em;
-  font-weight: 100;
-  color: #fff;
+line-height: 1em;
+font-size: 10em;
+font-weight: 100;
+color: #fff;
 }
-
 .kir-r2 {
-  line-height: 1em;
-  margin-top: -2em;
-  font-size: 5.5em;
-}
-
-</style>
-
-	<style>
-		.vl {
-			border-right: 2px solid lightgrey;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			height: 700px;
-			/*position: absolute;*/
-		}
-	</style>
-
-</head>
-
-		<link rel="stylesheet" href="center.css">
-		<br>
-		
-		<center>
-<iframe
-    src="https://player.twitch.tv/?channel=zackbatl&muted=true"
-    height="360"
-    width="720"
-    frameborder="0"
-    scrolling="no"
-    allowfullscreen="true">
-</iframe>
-
-	</center>
-
-				<center>
-				<iframe src='https://minnit.chat/MemerChat?embed&nickname=' style='border:none;width:60%;height:300px;' allowTransparency='true'></iframe><br>
-	</center>
-
-<div class="col-1 vl fixed-top">
-		<nav class="nav flex-column">
-			<ul class="navbar-nav" style="margin-top:20px">
-				<li class="nav-item">
-					<a class="nav-brand" href="homePage.html">
-					 <a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width ="42"></a>
-					</a>
-				</li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a>
-			    </li>
-			    			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a>
-			    </li>
-			    <li class="nav-item">
-			      <a class="nav-link" style="color:lightgray;margin-top:20px" href="uploadPage.html">Upload</a>
-			    </li>
-			  </ul>
-
-		</nav>
-	</div>
-	
-
-
-
-</body>
-</html>
+line-height: 1em;
+margin-top: -2em;
+font-size: 5.5em;
+}</style><style>.vl {
+border-right: 2px solid lightgrey;
+margin-top: 10px;
+margin-bottom: 10px;
+height: 700px;
+/*position: absolute;*/
+}</style><link rel="stylesheet" href="center.css"><br><center><iframe src="https://player.twitch.tv/?channel=zackbatl&amp;muted=true" height="360" width="720" frameborder="0" scrolling="no" allowfullscreen="true"></iframe></center><center><iframe src="https://minnit.chat/MemerChat?embed&amp;nickname=" style="border:none;width:60%;height:300px;" allowtransparency="true"></iframe><br></center><div class="col-1 vl fixed-top"><nav class="nav flex-column"><ul class="navbar-nav" style="margin-top:20px"><li class="nav-item"><a class="nav-brand" href="homePage.html"></a><a class="nav-link" style="color:lightgray;margin-top:20px" href="homePage.html"><img src="logo.png" alt="Memento" height="42" width="42"></a></li><li class="nav-item"><a class="nav-link" style="color:lightgray;margin-top:20px" href="PopMemes.html">Popular Memes</a></li><li class="nav-item"><a class="nav-link" style="color:lightgray;margin-top:20px" href="videoPage.html">Video Stream</a></li><li class="nav-item"><a class="nav-link" style="color:lightgray;margin-top:20px" href="uploadPage.html">Upload</a></li></ul></nav></div></body></html>
